* update logo w/ new graphics, new Josefin Slab font

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+
     <title>Ivy -- Awards on the Blockchain</title>
   </head>
   <body>
