--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ivy -- Awards on the Blockchain</title>
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-
-    <title>Ivy -- Awards on the Blockchain</title>
+    <link rel="stylesheet" href="https://use.typekit.net/bgs1tna.css">
   </head>
   <body>
     <div id='application' />
