--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/bgs1tna.css">
+
+    <link rel="shortcut icon" href="ivy--favicon.png">
   </head>
   <body>
     <div id='application' />
