* fix favicon * fix interface to have same function/event signature as main contract * add error message to awards/show

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/bgs1tna.css">
 
-    <link rel="shortcut icon" href="ivy--favicon.png">
+    <link rel="shortcut icon" href="/ivy--favicon.png">
   </head>
   <body>
     <div id='application' />
